--- a/style/main.css
+++ b/style/main.css
@@ -198,4 +198,20 @@ footer {
   background-color: #1e1e1e;
 }
 
+@media (max-width: 576px) {
+  .knowledge-card {
+  background-color: #1f1f1f;
+  color: white;
+  padding: 1rem;
+  border-radius: 12px;
+  text-align: center;
+  width: 130px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  transition: transform 0.2s ease;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+}
 
